# ABoard

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  ui.html  vite.config.ts
.github/workflows/: release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-clipboard-core-tray/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-UI-SPEC.md  01-VERIFICATION.md
.planning/phases/02-storage-history-management/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-ui-foundation-design-system/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-CONTEXT.md  03-VERIFICATION.md
docs/: README.en.md  README.zh.md
ralph/: CLAUDE.md  prd.json  progress.txt
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  db.rs  lib.rs  tray.rs
src-tauri/src/ai/: cloud.rs  config.rs  embedded.rs  local.rs  mod.rs  models.rs  processor.rs  router.rs
src-tauri/tests/: db_test.rs
src/components/: AiResultPopup.tsx  AiSettings.tsx  AiToolbox.tsx  ClipboardItemCard.tsx  ClipboardList.tsx  ConfirmDialog.tsx  ContentArea.tsx  ContextMenu.tsx  FloatingPopup.tsx  ImagePreview.tsx  ItemDetailModal.tsx  MainLayout.tsx  ModelManager.tsx  ModelParams.tsx  SearchBar.tsx  Settings.tsx  SettingsModal.tsx  SettingsPanel.tsx  Sidebar.tsx  TitleBar.tsx
src/stores/: ai-actions.ts  clipboard.ts  i18n.ts  theme.ts
src/styles/: design-tokens.css  index.css
(+21 files in other folders)
