[package]
name = "aboard"
version = "0.1.0"
edition = "2021"

[lib]
name = "aboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["time"] }
rusqlite = { version = "0.31", features = ["bundled"] }
core-graphics = { version = "0.24", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
